[gd_scene load_steps=12 format=2]

[ext_resource path="res://BG.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/fetch_game/cave_road.png" type="Texture" id=2]
[ext_resource path="res://sprites/fetch_game/mask.png" type="Texture" id=3]
[ext_resource path="res://MiniGames/FetchGamePlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/cavestuff/ball.png" type="Texture" id=5]
[ext_resource path="res://MiniGames/FetchGameBase.gd" type="Script" id=6]
[ext_resource path="res://sprites/dogbark_noeffect/d0.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/ball:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/FetchGamePlayer:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 856.718, 1523.32 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VictoryLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DogWithBallFront:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("YSort:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("YSort/FetchGamePlayer:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "grab_ball"
length = 4.8
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/ball:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/ball:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 867.759, 538.792 ), Vector2( 866.18, 714.049 ), Vector2( 866.18, 488.907 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/ball:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.01, 0.01 ), Vector2( 0.5, 0.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("YSort/FetchGamePlayer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.7, 3, 3.4, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 856.718, 972.276 ), Vector2( 856.718, 972.276 ), Vector2( 864.612, 760.704 ), Vector2( 864.612, 760.704 ), Vector2( 868.626, 537.395 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YSort:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 4.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DogWithBallFront:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 4.3, 4.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("YSort/FetchGamePlayer:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 3.4, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.01, 0.01 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("YSort/FetchGamePlayer:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("DogWithBallFront:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 4.3, 4.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 869.108, 539.661 ), Vector2( 916.221, 514.508 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("DogWithBallFront:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 4.3, 4.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.134957, 0.134957 ), Vector2( 14.5723, 14.5723 ) ]
}
tracks/10/type = "method"
tracks/10/path = NodePath(".")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 4.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "complete_end_sequence"
} ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("VictoryLabel:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "intro"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/ball:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/ball:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 3, 3 ), Vector2( 0.01, 0.01 ) ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("YSort/ball:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1203.06, -0.25, 0, 0.331651, 14.8094, 1203.06, -0.25, 0, 0.331651, 14.8094, 870.358, -1.29609, -22.2524, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 2.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("YSort/ball:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1518.72, -0.25, 0, 0.263967, 3.4458, 1518.72, -0.25, 0, 0.175978, -1317.71, 528.395, -1.24871, -197.965, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 2.5 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("YSort/FetchGamePlayer:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 856.718, 1523.32 ), Vector2( 856.718, 1523.32 ), Vector2( 856.718, 1097.99 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 3.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "intro_complete"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("DogWithBallFront:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Label:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("YSort:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/ball:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/FetchGamePlayer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/FetchGamePlayer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 856.718, 972.276 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DogWithBallFront:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YSort/FetchGamePlayer:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="FetchGameBase" type="Node2D"]
position = Vector2( 57.7901, -326.168 )
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ -1.95044e+07 ]
}

[node name="cave_road" type="Sprite" parent="."]
visible = false
position = Vector2( 865.535, 789.633 )
scale = Vector2( 2.46731, 2.79689 )
texture = ExtResource( 2 )

[node name="BG2" parent="." instance=ExtResource( 1 )]
show_behind_parent = false
margin_left = -533.438
margin_top = -231.475
margin_right = 2288.57
margin_bottom = 1873.54
rect_pivot_offset = Vector2( 912.084, 96.085 )

[node name="VP" type="Position2D" parent="."]
position = Vector2( 868.606, 537.597 )

[node name="PositionSameAsYsort" type="Position2D" parent="."]

[node name="edge" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.0784314, 0.937255, 0.109804, 1 )
joint_mode = 1

[node name="horizon" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.0
default_color = Color( 0.0784314, 0.937255, 0.109804, 1 )

[node name="YSort" type="YSort" parent="."]

[node name="FetchGamePlayer" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 864.005, 776.979 )

[node name="ball" type="Sprite" parent="YSort"]
position = Vector2( 866.233, 708.207 )
scale = Vector2( 0.483667, 0.483667 )
texture = ExtResource( 5 )

[node name="mask" type="Sprite" parent="."]
visible = false
position = Vector2( 911.491, 839.519 )
scale = Vector2( 1.92605, 1.22346 )
texture = ExtResource( 3 )

[node name="BG" parent="." instance=ExtResource( 1 )]
margin_left = -567.451
margin_top = -1338.1
margin_right = 2254.56
margin_bottom = 766.908
rect_pivot_offset = Vector2( 912.084, 96.085 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 70.8706, 9.84314 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -48.9073, 1156.15, 834.147, 1518.33, 1692.79, 1192.78, 1102.73, 525.4, 1806.73, 557.955, 2628.74, 1758.42, -398.874, 1640.41, 52.827, 525.4, 602.193, 529.469 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 1 )
anims/grab_ball = SubResource( 2 )
anims/intro = SubResource( 3 )
anims/running_zone = SubResource( 4 )

[node name="VictoryLabel" type="Label" parent="."]
margin_left = 659.529
margin_top = 599.353
margin_right = 1108.53
margin_bottom = 670.353
text = "FETCH SUCCESSFUL!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DogWithBallFront" type="Node2D" parent="."]
visible = false
position = Vector2( 869.108, 539.661 )
scale = Vector2( 0.134957, 0.134957 )

[node name="d0" type="Sprite" parent="DogWithBallFront"]
texture = ExtResource( 7 )

[node name="ball2" type="Sprite" parent="DogWithBallFront"]
position = Vector2( -0.568665, 21.1434 )
texture = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="left_endpoint" type="Position2D" parent="."]
position = Vector2( -125.992, 1279.61 )

[node name="right_endpoint" type="Position2D" parent="."]
position = Vector2( 1931.22, 1348.51 )

[node name="PacerTimer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 746.911
margin_top = 779.646
margin_right = 978.911
margin_bottom = 835.646
text = "GO FETCH!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="PacerTimer" to="." method="_on_PacerTimer_timeout"]
